<resources>
    <string name="app_name">Hands-Free Selfie Camera</string>
    <string name="request_permission">
        This app takes photos and stores them to external storage. To do that, it needs permission.
    </string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="background_content_description">A decorative background image.</string>
    <string name="getting_started_button">Get started</string>
    <string name="selfie_photo_content_description">A photo that shows a woman taking a selfie.</string>
    <string name="free_selfie_photo_content_description">
        A man taking a jumping selfie with Jump-In-Front Camera without being constraint to holding the
        camera.
    </string>
    <string name="intro_free_selfie_title">Free the selfie!</string>
    <string name="intro_free_selfie_body">
        Typical selfies constrain the users to holding the camera at arm\'s length.\n
        \n
        Hands-Free Selfie Camera frees you to put the photo down, run around, jump, and pose to your heart\'s
        content. Jump-In-Front Camera takes a photo every second (customizable) to be sure to capture all
        the special moments.
    </string>
    <string name="review_grid_content_description">An illustration to suggest a grid of photos.</string>
    <string name="intro_review_title">Review photos</string>
    <string name="intro_review_body">
        The best photographers take hundreds or even thousands of photos to capture that one perfect
        shot.\n
        \n
        Hands-Free Selfie Camera comes with a photo review tool to organize the photos and discard the rest.
    </string>
    <string name="flash_content_description">An icon that indicates the flash mode.</string>
    <string name="flash_off_content_description">An icon to set the flash to off.</string>
    <string name="flash_auto_content_description">An icon to set the flash to auto.</string>
    <string name="flash_on_content_description">An icon to set the flash to on.</string>
    <string name="switch_camera_content_description">An icon that switches between the front and back camera.</string>
    <string name="half_second_interval">.5s</string>
    <string name="second_interval">1s</string>
    <string name="three_second_interval">3s</string>
    <string name="ten_second_interval">10s</string>
    <string name="custom_interval">Custom</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_on">Flash on</string>
    <string name="action_button_content_description">Starts/pauses taking photos</string>
    <string name="thumbnail_content_description">
        A thumbnail of the last photo. Clicking it opens a review of all taken photos.
    </string>
    <string name="action_button_hint_title">Start photo session</string>
    <string name="action_button_hint_message">
        Tap the start button to start taking photos at the set time interval.
    </string>
    <string name="thumbnail_hint_title">Review photos</string>
    <string name="thumbnail_hint_message">
        Tap the thumbnail to review your photos.
    </string>
    <string name="camera_loading_message">Loading...</string>
    <string name="loading_icon_content_content_description">Icon suggesting that the camera is loading.</string>
    <string name="custom_interval_dialog_title">Pick a custom time interval in seconds.</string>
    <string name="camera_error_dialog_title">Failed to open the camera.</string>
    <string name="camera_error_dialog_message">Tap okay to re-try opening the camera.</string>
    <string name="camera_error_dialog_retry_button">Retry</string>
    <string name="about_app_heading">About</string>
    <string name="about_app_body_text">
        Jump-In-Front Camera is an app that takes photos on its own in a regular interval. It\'s like a ghost
        that photographs you.\n
        \n
        If you want to take a selfie, the back facing camera makes higher quality photos. Putting
        the camera down instead of holding it steps up the photo quality another notch. But how do
        you trigger the photos then? A timer takes one photo. With Hands-Free Selfie Camera, you can make the
        phone take a series of photos while you post. At the end, simply look through the photos
        and pick the best one.\n\nWhen taking a group photo, there is often a runner. The runner
        presses the timer button and runs to the group. Some smart people simply turn on a video
        and screen grab the perfect shot out of it. The problem is that the camera can make higher
        quality photos for still shots than ongoing video. So, Jump-In-Front Camera comes to the rescue.
        It\'ll steadily snap photos at the highest still photo quality. You pick the best one and
        delete the rest.
    </string>
    <string name="about_feedback_heading">Send Us Feedback!</string>
    <string name="about_feedback_body_text">
        I love to hear from you. Send your feedback to
        <a href="mailto:thomas@playposse.com?subject=Feedback About Hands-Free Selfie Camera Android App">thomas@playposse.com</a>.
    </string>
    <string name="about_credits_heading">Copyright And Credits</string>
    <string name="about_credits_body_text">
        Water drop sound effect recorded by Mike Koenig\n
        Camera by Iconsparty from the Noun Project\n
        Ghost by Visual Glow from the Noun Project\n
        Star by Ralf Schmitzer from the Noun Project\n
        Photo of woman taking a selfie by Annie Spratt on Unsplash\n
        Photo of man jumping by Havilah Galaxy on Unsplash\n
        Smartphone by Dmitry Kovalev from the Noun Project\n
        Sunny Beach by Chanut is Industries from the Noun Project\n
        Summer Sea by Chanut is Industries from the Noun Project\n
        dolphins by  Laymik from the Noun Project\n
        yoga by Alice Noir from the Noun Project\n
        Photo by Aral Tasher on Unsplash\n
        Photo by Christopher Campbell on Unsplash\n
        \n
        © 2017 Thomas Fischer
    </string>
    <string name="list_shoots_title">Photo sessions</string>
    <string name="cover_photo_content_description">Show the first photo of a photo session.</string>
    <string name="photo_count_label">%1$d photos</string>
    <string name="photo_shoot_loading_message">Loading…</string>
    <string name="photo_shoot_empty_message">There are no photos.</string>
    <string name="minutes_date">%1$d minutes ago</string>
    <string name="same_day_date">%1$s</string>
    <string name="short_date">%1$s</string>
    <string name="orphan_photos_dialog_title">Found photos!</string>
    <string name="orphan_photos_dialog_message">
        The app found photos that weren\'t in a photo shoot. A new photo shoot has been created for
        these stray photos.
    </string>
    <string name="review_photo_shoot_title">Review photo session</string>
    <string name="review_photo_content_description">A photo that was taken with Jump-In-Front Camera</string>
    <string name="selected_photos_label">Selected photos</string>
    <string name="selected_photos_hint">Drag photos here to keep them.</string>
    <string name="delete_photos_dialog_title">Delete</string>
    <string name="delete_unselected_photos_option">Unselected photos</string>
    <string name="delete_all_photos_option">All photos</string>
    <string name="delete_photos_toast">Deleted %1$d photos.</string>
    <string name="review_photo_shoot_feature_discovery">
        Move photos into the left column to select them. Then delete all the unselected photos.\n
        - To select: Long tap and drag photo to the right.\n
        - To view: Tap a photo.\n
        - To compare two photos: Use multi-touch. Put one finger on each photo at the same time.\n
    </string>
    <string name="three_dot_divider_content_description">Three dots as a visual divider.</string>
    <string name="selected_photo_count">(%1$d)</string>
    <string name="photo_content_description">Full view of a single photo.</string>
    <string name="select_button_content_description">Button to select/unselect the current photo.</string>
    <string name="rotate_content_description">Button to rotate the photo 90 degrees.</string>
    <string name="edit_in_button_content_description">Button to edit the current photo.</string>
    <string name="share_button_content_description">Button to share the current photo.</string>
    <string name="delete_button_content_description">Button to delete the current photo.</string>
    <string name="confirm_delete_photo_dialog">Confirm to delete the photo</string>
    <string name="confirm_delete_photo_dialog_body"></string>
    <string name="rotation_toast">Computing rotation…</string>
    <string name="keep_label">Keep</string>
    <string name="compare_photos_title">Compare</string>
    <string name="full_photo_content_description">
        Shows a full photo for comparison to the photo next to it.
    </string>
    <string name="cancel_button_label">Cancel</string>
    <string name="delete_button_label">Delete</string>
    <string name="dismiss_link">Dismiss</string>
    <string name="dialog_continue_button">Continue</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="confirm_button_label">Confirm</string>
    <string name="ok_button_label">OK</string>
    <string name="delete_directory_content">Delete all photo shoots</string>
    <string name="send_feedback_menu">Send feedback</string>
    <string name="about_menu">About</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="delete_photos_menu">Delete photos</string>
    <string name="share_photos_menu">Share photos</string>
    <string name="rotate_left_menu">Rotate left</string>
    <string name="rotate_right_menu">Rotate right</string>
    <string name="edit_menu">Edit</string>
    <string name="rotate_menu">Rotate</string>
    <string name="confirm_delete_directory_title">Confirm</string>
    <string name="confirm_delete_directory_message">All photo sets and photos will be deleted.</string>
    <string name="feedback_dialog_title">Send us feedback!</string>
    <string name="feedback_dialog_message">An e-mail will be opened where you can send me feedback.</string>
    <string name="feedback_email_recipient">thomas@playposse.com</string>
    <string name="feedback_email_subject">Feedback About Hands-Free Selfie Camera App</string>
    <string name="feedback_email_body">Please, send me your feedback. I care about hearing from you.</string>
    <string name="permission_error_title">Can\'t take photos!</string>
    <string name="permission_error_message">
        To take photos, you have to grant permission to access the camera and save photos to
        storage.
    </string>
    <string name="camera_permission_label">Camera permission</string>
    <string name="storage_permission_label">Storage permission</string>
    <string name="grant_permission_link">Grant</string>
    <string name="directory_creation_error_title">Failed to create the photo directory.</string>
    <string name="directory_creation_error_message">
        To be able to save photos, the app failed to create this directory: %1$s. Please, try to
        create it manually and then tap the button.
    </string>
    <string name="directory_creation_error_button">Try again</string>
    <string name="failed_to_create_directory_toast">Failed to detect and/or create directory.</string>
</resources>