<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_photos_menu_item"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_photos_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/share_photos_menu_item"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_photos_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/edit_menu_item"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/rotate_menu_item"
        android:icon="@drawable/ic_rotate_90_degrees_ccw_white_24dp"
        android:title="@string/rotate_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/rotate_left_menu_item"
                android:icon="@drawable/ic_rotate_left_white_24dp"
                android:title="@string/rotate_left_menu" />

            <item
                android:id="@+id/rotate_right_menu_item"
                android:icon="@drawable/ic_rotate_right_white_24dp"
                android:title="@string/rotate_right_menu" />
        </menu>
    </item>
</menu>