<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listActivityBackground"
    android:orientation="vertical"
    tools:context="com.playposse.ghostphoto.activities.other.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/solidToolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_heading" />

            <TextView
                style="@style/sectionBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_body_text" />

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_feedback_heading" />

            <TextView
                style="@style/sectionBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/about_feedback_body_text" />

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_credits_heading" />

            <TextView
                style="@style/sectionBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/about_credits_body_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
