<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.other.IntroductionSlide1Fragment">

    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/review_grid_content_description"
        android:src="@drawable/ic_view_comfy_black_24dp"
        app:layout_marginTopPercent="10%"
        app:layout_widthPercent="70%" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/intro_review_title"
            android:textColor="@color/primaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/intro_review_body"
            android:textColor="@color/unselectedText" />
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>
