<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.playposse.ghostphoto.activities.other.PermissionRecoveryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="gone"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <LinearLayout
            android:id="@+id/requestPermissionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/permission_error_title"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/permission_error_message"
                android:textColor="@color/bodyText"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/grantCameraPermissionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingBottom="16dp"
                    android:text="@string/camera_permission_label"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/grantCameraPermissionLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingBottom="16dp"
                    android:text="@string/grant_permission_link"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/grantStoragePermissionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/storage_permission_label"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/grantStoragePermissionLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/grant_permission_link"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                    android:textStyle="bold" />
            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/directoryCreationErrorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/directory_creation_error_title"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/directoryCreationErrorMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/directory_creation_error_message"
                android:textColor="@color/bodyText"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <Button
                android:id="@+id/createDirectoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccent"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/directory_creation_error_button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
