<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listActivityBackground"
    android:orientation="vertical"
    tools:context="com.playposse.ghostphoto.activities.review.ReviewPhotoShootActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/solidToolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <com.playposse.ghostphoto.util.view.NotificationCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:message="@string/review_photo_shoot_feature_discovery"
        app:preferenceKey="hasReviewHintBeenSeen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/allPhotosRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="4dp"
            android:background="#FFF"
            android:orientation="vertical">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/three_dot_divider_content_description"
                android:src="@drawable/selected_photos_drag_handle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:text="@string/selected_photos_label"
                    android:textColor="@color/secondaryTextColorLight" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="(#)"
                    android:textColor="@color/disabledTextColorLight" />


            </LinearLayout>



            <TextView
                android:id="@+id/selectedPhotosHintTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/selectionPanelBackground"
                android:gravity="center"
                android:text="@string/selected_photos_hint"
                android:textColor="@color/disabledTextColorLight"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/selectedPhotosRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
